# fem

./: .gitignore  .gitmodules  CLEANUP_ACTIONS.md  CLEANUP_SUMMARY.md  CMakeLists.txt  PHASE1_COMPLETE.md  QUICKSTART.md  README.md  REFACTOR_PLAN.md  REFACTOR_STATUS.md  TODO.md  VECTOR_REFACTOR_PLAN.md
docs/: MESH_REDESIGN.md  MESH_REDESIGN_V2.md  SHAPE_FUNCTION_DESIGN.md  TECHNICAL_DESIGN.md  refactor_plan.md
docs/01-theory/: 01-fem-fundamentals.md
docs/03-implementation/: 01-architecture.md
docs/04-analysis-types/: 01-static-structural.md
docs/06-roadmap/: development-plan.md  feature-comparison.md  geometric-nonlinear-plan.md  static-structural-plan.md
docs/refactor/: dof_handler_refactor.md
docs/research/: dof_management.md  equation_initialization.md
examples/: CMakeLists.txt  benchmark_preconditioners.cpp  biaxial_tension_demo.cpp  cantilever_beam.cpp  cantilever_material.cpp  cooks_membrane.cpp  dof_handler_benchmark.cpp  dof_handler_demo.cpp  elasticity_2d.cpp  elasticity_debug.cpp  elasticity_full_debug.cpp  elasticity_simple.cpp  heat_2d.cpp  heat_conduction_2d.cpp  incremental_postprocess_demo.cpp  material_demo.cpp  material_simple_test.cpp  nonlinear_truss.cpp  plasticity_demo.cpp  plasticity_nr_demo.cpp  plasticity_pcg_demo.cpp  plasticity_verification.cpp  poisson_2d.cpp  poisson_2d_demo.cpp  poisson_2d_v2.cpp  pure_shear_demo.cpp  reaction_forces_demo.cpp  test_biaxial_tension.cpp  test_data_manager.cpp  test_elasticity_with_plasticity.cpp  test_incremental_postprocess.cpp  test_plasticity_bending.cpp  test_plasticity_nr_complete.cpp  test_plasticity_pcg.cpp  test_plasticity_simple.cpp  test_pure_shear.cpp  test_reaction_forces.cpp  test_stress_extraction_debug.cpp  test_unified_elasticity.cpp  test_unified_heat.cpp  (+1 more)
src/: CMakeLists.txt
src/assembly/: assembler.cpp  assembler.h  boundary_condition.cpp  boundary_condition.h  convergence_history.cpp  convergence_history.h  load_step.cpp  load_step.h  sparse_matrix.cpp  sparse_matrix.h  static_solver.cpp  static_solver.h
src/core/: kinematics.cpp  kinematics.h  logger.cpp  logger.h  timer.cpp  timer.h  types.h
src/data/: README.md  base_data.cpp  base_data.h  data_location.h  data_manager.h  field_data.h
src/element/: element_base.cpp  element_base.h  quad2d.cpp  quad2d.h  triangle2d.cpp  triangle2d.h
src/io/: io.cpp  io.h  vtk_writer.cpp  vtk_writer.h
src/material/: CMakeLists.txt  README.md  isotropic_elastic.cpp  isotropic_elastic.h  j2_plasticity.cpp  j2_plasticity.h  j2_plasticity_kinematic.cpp  j2_plasticity_kinematic.h  material.cpp  material.h  material_factory.cpp  material_factory.h  neo_hookean.cpp  neo_hookean.h  orthotropic_elastic.cpp  orthotropic_elastic.h  state_variables.cpp  state_variables.h
src/math/: bicgstab.cpp  bicgstab.h  cg.cpp  cg.h  dense_matrix.cpp  dense_matrix.h  newton_raphson.cpp  newton_raphson.h  pcg.cpp  pcg.h  solver.cpp  solver.h  solver_factory.cpp  solver_factory.h  sparse_matrix.cpp  sparse_matrix.h  vector.cpp  vector.h
src/mesh/: dof_handler.cpp  dof_handler.h  element.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_generator.cpp  mesh_generator.h  model.cpp  model.h
src/mesh_v2/: element.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h
src/physics/: elasticity.cpp  elasticity.h  elasticity_3d.cpp  elasticity_3d.h  elasticity_material.cpp  elasticity_material.h  elasticity_nonlinear.cpp  elasticity_nonlinear.h  elasticity_unified.cpp  elasticity_unified.h  elasticity_v2.cpp  elasticity_v2.h  heat.cpp  heat.h  heat_conduction.cpp  heat_conduction.h  heat_unified.cpp  heat_unified.h  physics_base.cpp  physics_base.h  physics_factory.cpp  physics_factory.h
src/postprocess/: post_processor.cpp  post_processor.h  post_processor_incremental.cpp  post_processor_incremental.h
src/shape/: CMakeLists.txt  shape_brick8.cpp  shape_brick8.h  shape_function.cpp  shape_function.h  shape_function_factory.cpp  shape_function_factory.h  shape_quad4.cpp  shape_quad4.h  shape_tet4.cpp  shape_tet4.h  shape_tri3.cpp  shape_tri3.h
src/solver/: bicgstab.cpp  bicgstab.h  cg.cpp  cg.h  newton_raphson.cpp  newton_raphson.h  newton_raphson_solver.cpp  newton_raphson_solver.h  nonlinear_solver.cpp  nonlinear_solver.h  pcg.cpp  pcg.h  solver.cpp  solver.h
tests/: CMakeLists.txt  test_advanced_materials.cpp  test_amg.cpp  test_assembler.cpp  test_assembly.cpp  test_core.cpp  test_data.cpp  test_elasticity_nonlinear.cpp  test_element.cpp  test_geometric_nonlinear_simple.cpp  test_ilu.cpp  test_io.cpp  test_kinematics.cpp  test_load_step.cpp  test_material.cpp  test_material_factory.cpp  test_material_models.cpp  test_math.cpp  test_mesh.cpp  test_mesh_generator.cpp  test_mesh_v2.cpp  test_neo_hookean.cpp  test_newton_raphson.cpp  test_nonlinear_hyperelastic.cpp  test_physics.cpp  test_physics_factory.cpp  test_shape_function.cpp  test_shape_integration.cpp  test_solver.cpp  test_solver_factory.cpp
